# nfv_exam

./: CMakeLists.txt  README.md  make.sh  run.sh  tags
batch_run/: batch_run.sh  build_batch.py  copy_result.sh
batch_sensitive_study/: batch_run.sh  build_batch.py  copy_result.sh
data/: .log.swp  bandwidth_evaluation  cpu_evaluation  flow_evaluation  flow_template.config  flow_template.config.0510  memory_evaluation  req_evaluation
include/: flow.h  flow_manager.h  flow_node.h  log.h  physical_node.h  physical_node_manager.h  req.h  req_manager.h  scheduler.h  service_chain.h  service_chain_manager.h  vnf_instance.h
src/: .flow_manager.cpp.swp  .service_chain_manager.cpp.swp  flow.cpp  flow_manager.cpp  flow_node.cpp  log.cpp  main.cpp  physical_node.cpp  physical_node_manager.cpp  req.cpp  req_manager.cpp  scheduler.cpp  service_chain.cpp  service_chain_manager.cpp  vnf_instance.cpp
